lang/tests/compile_fail/init_self_recursive_typed_seed.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/init_self_recursive_typed_seed.rs:21:63
   |
21 |     #[account(mut, init, payer = payer, address = Item::seeds(item.namespace))]
   |                                                   ----------- ^^^^^^^^^^^^^^ expected `u32`, found `PodU32`
   |                                                   |
   |                                                   arguments to this function are incorrect
   |
note: associated function defined here
  --> tests/compile_fail/init_self_recursive_typed_seed.rs:7:1
   |
 7 | #[account(discriminator = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `account` (in Nightly builds, run with -Z macro-backtrace for more info)
help: call `Into::into` on this expression to convert `PodU32` into `u32`
   |
21 |     #[account(mut, init, payer = payer, address = Item::seeds(item.namespace.into()))]
   |                                                                             +++++++

error[E0609]: no field `namespace` on type `&mut quasar_lang::entrypoint::AccountView`
  --> tests/compile_fail/init_self_recursive_typed_seed.rs:21:68
   |
21 |     #[account(mut, init, payer = payer, address = Item::seeds(item.namespace))]
   |                                                                    ^^^^^^^^^ unknown field
